--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <title>Asset Map</title>
     <!-- Use root-relative paths if public is set as the root for static content -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cytoscape/3.19.1/cytoscape.min.js"></script>
-    <script src="/js/scripts.js" defer></script>
+    <script src="/js/scripts.js" type="module" defer></script>
     <link href="/css/assetmap.css" rel="stylesheet" />
   </head>
   <body>
