added format code

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Asset Map</title>
+    <link rel="icon" href="/assets/favicon.ico" type="image/x-icon" />
     <!-- Use root-relative paths if public is set as the root for static content -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cytoscape/3.19.1/cytoscape.min.js"></script>
     <script src="/js/scripts.js" defer></script>
